--- a/foundations/odin-recipes/style.css
+++ b/foundations/odin-recipes/style.css
@@ -1,17 +1,38 @@
 body{
     background-color: black;
     color: white;
+    padding: 0;
+    margin: 0;
+
 }
 
 #page-title{
+    background-color: lightgreen;
+    padding: 20px;
+    text-align: center;
     margin: 2% 20%;
-    align-content: center;
-    font-size: 28px;
+    font-size: 40px;
     font-weight: bold;
     font-family: Verdana, "Times New Roman", sans-serif;
 }
 
 .page-content{
+    font-size: 32px;
     margin: auto 10%;
     align-items: center;
+    display: flex;
+    flex-direction: column;
+}
+
+footer{
+
+}
+
+.foot{
+    color: azure;
+    background-color: darkgray;
+    text-align: center;
+    display: inline;
+    align-self: center;
+    margin: auto 45% 45%;
 }
